# CFG-DP

./: .gitignore  Dockerfile  README.md  conver.sh
diffusion_policy/: Task13_zed_dualArm.yaml  eval.py  multirun_metrics.py  pyproject.toml  ray_exec.py  ray_train_multirun.py
kuavo/: Lerobot-ActPolicy-Training-Demo.ipynb  README.md  pyproject.toml
kuavo/doc/: command.md  conclusion.md
kuavo/kuavo_1convert/: README.md  cvt_rosbag2lerobot.py  cvt_rosbag2zarr.py
kuavo/kuavo_1convert/collect_data/: cam.sh  cam_tmux.sh  kuavo_manipulation.md  record.py
kuavo/kuavo_1convert/common/: kuavo_dataset.py  lerobot_dataset.yaml
kuavo/kuavo_1convert/config/: Task0.yaml  Task3-pcd.yaml  claw.json  kuavo2lerobot.json  record.json
kuavo/kuavo_2train/: README_convert_and_train.md  README_convert_and_train_zh.md  convert_and_train.py  convert_and_train.sh  example_task20.sh
kuavo/kuavo_3deploy/: deploy_config.py  env.py  eval.py  model_run.sh  run.sh  run_fr0.sh
kuavo/kuavo_3deploy/tools/: arm_joint_deg_interpolator.py  arm_joint_deg_poses.json  control_lejuclaw.py  dex_hand_fake_state.py  img_reader.py  msg_forwarding_server.py
kuavo/kuavo_utils/: bag_utils.py  pcd_util.py  plot.py  replay_buffer.py  rosmsg_processor.py  test.py
kuavo/notebooks_check/: TerminationEval.ipynb  dataset_check_lerobot.ipynb  dataset_check_rosbag.ipynb  dataset_check_zarr.ipynb  offlineCheck_LeRobot.ipynb  offlineEval_DP.ipynb  offlineEval_DP.py  offlineEval_LeRobot.ipynb  offlineEval_LeRobot.py  offlineEval_LeRobot2.ipynb  plot.py  plot1.py
kuavo/notebooks_check/eval_offline_doc/: plot.py
(+48 files in other folders)
